--- a/hw4temp/question4.Rmd
+++ b/hw4temp/question4.Rmd
@@ -19,7 +19,7 @@ Column {data-width=400}
 
 ```{r select data}
 
-# User selects type (1-3) and level (1-5)
+# User selects type and level
 selectInput("type", "Type:",
                 c("1" = "1",
                   "2" = "2"))
@@ -28,31 +28,12 @@ selectInput("level", "Level:",
                 c("1" = "1",
                   "2" = "2",
                   "3" = "3"))
-
-# radioButtons("type", "Choose type:",
-#                c("Type 1" = "1",
-#                  "Type 2" = "2"))
-# 
-# radioButtons("level", "Choose level:",
-#                c("Level 1" = "1",
-#                  "Level 2" = "2",
-#                  "Level 3" = "3"))
-
-h4("Chosen type:")
-#verbatimTextOutput("otype")
-renderText({input$type})
-
-
-h4("Chosen level:")
-#verbatimTextOutput("olevel")
-renderText({input$level})
 ```
 
 Column {data-width=600}
 -----------------------------------------------------------------------
 
-### Plot of Average Composition
-
+### Plot of average composition for given type and level
 ```{r display composition}
 
 # Read in chosen Kirby data
@@ -61,46 +42,10 @@ library(magrittr); library(dplyr); library(MRIcloudT1volumetrics); library(ggplo
 dat = readSubject("/Users/gracewindheim/Documents/gmwDataSci/hw4temp/kirby_3_1_ax_283Labels_M2_corrected_stats.txt")
 dat = subject2df(dat)
 
-#### CREATE PLOT ####
-
-#t = reactive({as.numeric(input$type)})
-#l = reactive({as.numeric(input$level)})
-
-#x = reactive({filter(dat, type == input$type, level == input$level)})
-#x = data.frame(x)
-
-# tl = reactive({
-#   filter(dat, type == t(), level == l())
-#   })
-
-
-#plotOutput("plot1")
-renderPlot({
-  dat %>% filter(type == input$type, level == input$level) %>% ggplot(aes(x=roi, y=volume)) + geom_col()
-})
-
-
-# Find the composition
-
 # Make plotly of the composition
 library(plotly)
-
-
-```
-
-### Chart C
-
-```{r}
-#plotlyOutput("compPlot")
-
-library(plotly)
-
 renderPlotly({
-  fig = plot_ly(
-  x = c("giraffes", "orangutans", "monkeys"),
-  y = c(20, 14, 23),
-  name = "SF Zoo",
-  type = 'bar')
-  })
-```
+  dat %>% filter(type == input$type, level == input$level) %>% plot_ly(labels = ~roi, values = ~volume, type = 'pie')
+})
 
+```
