--- a/hw5temp/gtrends.Rmd
+++ b/hw5temp/gtrends.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "Untitled"
+title: "Coronavirus Google Trends"
 output: 
   flexdashboard::flex_dashboard:
-    orientation: columns
-    vertical_layout: fill
+    orientation: rows
+    vertical_layout: scroll
     runtime: shiny
 ---
 
@@ -11,50 +11,53 @@ output:
 library(flexdashboard); library(gtrendsR); library(plotly); library(dplyr)
 ```
 
-Column {data-width=500}
------------------------------------------------------------------------
+Inputs {.sidebar}
+-------------------------------------
 
-Times:
-
-"now 1-H" Last hour
-"now 4-H" Last four hours
-"now 1-d" Last day
-"now 7-d" Last seven days
-"today 1-m" Past 30 days
-"today 3-m" Past 90 days
-"today 12-m" Past 12 months
-"today+5-y" Last five years (default)
-"all" Since the beginning of Google Trends (2004)
-
-
-### Chart A
-
-```{r google trends}
+```{r}
+# see coronavirus search alone
 
 textInput("search", "Search term:", value = "flu")
 
 selectInput("time", "Time range: ",
                 c("Past hour" = "now 1-H",
                   "Past day"= "now 1-d",
-                  "Past 7 days" = "now 7-d"
+                  "Past 7 days" = "now 7-d",
+                  "Past 30 days" = "today 1-m",
+                  "Past 90 days" = "today 3-m",
+                  "Past 12 months" = "today 12-m",
+                  "Past 5 years" = "today+5-y"
                   ), selected = "Past hour")
 
-# Gather trends data. Interactive: Substitute "flu" with user's search term
-x = gtrends("coronavirus", time = "today 3-m") # last hour
-#plot(x)
+submitButton("Update")
+
+```
+ 
+
+Row
+-----------------------------------------------------------------------
+
+### Interest over time - Coron
+
+```{r comparison}
+
 
 renderPlotly({
-  y = gtrends(c("coronavirus", input$search), time = input$time) # last hour
+  if (is.null(input$search)) {
+    y = gtrends("coronavirus", time = input$time)
+  } else {
+    y = gtrends(c("coronavirus", input$search), time = input$time)
+  }
   plot(y)
 })
 ```
 
-Column {data-width=500}
+Row {.tabset .tabset-fade}
 -----------------------------------------------------------------------
 
 ### Related topics
 
-```{r}
+```{r related topics}
 x = gtrends("coronavirus", time = "today 3-m") # last hour
 
 
@@ -76,7 +79,7 @@ renderPlotly({
 
 ### Related queries
 
-```{r}
+```{r related queries}
 # Related queries
 renderPlotly({
   queries = x$related_queries %>% filter(subject >= 0)
