cleaned up page and deployed to shinyapps.io

--- a/hw5temp/gtrends.Rmd
+++ b/hw5temp/gtrends.Rmd
@@ -14,13 +14,17 @@ library(flexdashboard); library(gtrendsR); library(plotly); library(dplyr)
 Inputs {.sidebar}
 -------------------------------------
 
-Compare Google search results for "coronavirus" to:
+DISCLAIMER: This was created as part of a class project and should not be used as official health information.
 ```{r}
-# see coronavirus search alone
 
-textInput("search", "Search term:", value = "virus")
+# see coronavirus search alone or compare to another query
+radioButtons("view", "See the number of hits for the search term 'coronavirus' ",
+                       c("by itself" = "1",
+                         "compared to: " = "2"),
+                 selected = "2")
+textInput("search", NULL, value = "virus")
 
-selectInput("time", "in the past: ",
+selectInput("time", "Show results from the: ",
                 c("Past hour" = "now 1-H",
                   "Past day"= "now 1-d",
                   "Past 7 days" = "now 7-d",
@@ -28,32 +32,32 @@ selectInput("time", "in the past: ",
                   "Past 90 days" = "today 3-m",
                   "Past 12 months" = "today 12-m",
                   "Past 5 years" = "today+5-y"
-                  ), selected = "Past hour")
+                  ), selected = "Past 30 days")
 
-selectInput("source", "from: ",
-            c("all web" = "web",
-              "news" = "news",
-              "YouTube" = "youtube",
-              "images" = "images",
-              "Froogle" = "froogle"
-            )
-  
-)
-
-submitButton("Update") # NEED TO FIX
+selectInput("source", "Source results from: ",
+            c("All web" = "web",
+              "YouTube only" = "youtube",
+              "Images only" = "images",
+              "Froogle only" = "froogle"
+            ))
 
 ```
- 
+(Graphics may take a few moments to load, please be patient!)
 
 Row
 -----------------------------------------------------------------------
 
-### Interest over time
+### Search hits plotted on a relative scale
 
 ```{r comparison}
 
 renderPlotly({
-  y = gtrends(c("coronavirus", input$search), time = input$time, gprop = input$source)
+  if (input$view == 2) {
+    y = gtrends(c("coronavirus", input$search), time = input$time, gprop = input$source) 
+  } else {
+    y = gtrends("coronavirus", time = input$time, gprop = input$source)
+  }
+  
   plot(y)
 })
 
@@ -62,20 +66,31 @@ renderPlotly({
 Row
 -----------------------------------------------------------------------
 
-### Related queries
+### Related queries for 'coronavirus'
 
 ```{r related queries}
 # Related queries
 renderPlotly({
   x = gtrends("coronavirus", time = input$time, gprop = input$source)
   
-  queries = x$related_queries %>% filter(subject >= 1)
-  queries$subject = as.numeric(queries$subject) # make number
-  queries = na.omit(queries)
+  if (is.null(x$related_queries)) {
+    verbatimTextOutput("No results found, try a different search!")
+  } else {
+    
+    queries = x$related_queries %>% filter(subject >= 1)
+    queries$subject = as.numeric(queries$subject) # make number
+    queries = na.omit(queries)
+    
+    queries$value <- factor(queries$value, levels = unique(queries$value)[order(queries$subject, decreasing = FALSE)]) # order
+    
+    x <- list(title = "Search hits")
+    y <- list(title = "Related query")
+    fig = plot_ly(queries, x = ~subject, y = ~value, type = 'bar', name = "Related queries", marker = list(color = '#9119b8')) 
+    fig = fig %>% layout(xaxis = x, yaxis = y)
+    
+    fig
+  }
   
-  queries$value <- factor(queries$value, levels = unique(queries$value)[order(queries$subject, decreasing = FALSE)]) # order
-  
-  plot_ly(queries, x = ~subject, y = ~value, type = 'bar', name = "Related queries", marker = list(color = '#9119b8')) 
     
 })
 
