--- a/hw7temp/answershw7.Rmd
+++ b/hw7temp/answershw7.Rmd
@@ -10,24 +10,33 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Question 1
 
 Use squared error loss (a linear model) and the variables waist, age, sex and bmi to predict log(rdi4p + 1). Interpet the coefficients.
-```{r cars}
+```{r multivar}
 dat = read.csv("shhs1.txt", header=T, sep="\t")
-
+head(dat)
 # using waist, age, sex, bmi to predict log(rdi4p + 1)
-x = dat$bmi_s1
 y = log(dat$rdi4p + 1)
+
+summary(lm(y ~ waist + age_s1 + gender + bmi_s1, data = dat))
 ```
+Intercept = 
+Waist coefficient = 
+Age coefficient = 
+Gender coefficient = 
+BMI coefficient = 
+
 
 ## Question 2
 
 Define sleep disordered breathing as having an rdi4p greater than 15. Use logistic regression to fit a model on having sleep disordered breathing using waist, age, sex and bmi as predictors. Interpret your coefficients.
-```{r}
+```{r logit 15}
 
 ```
 
+
 ## Question 3
+
 Use a logistic regresion model to predict HTNDerv_S1 using age, sex, bmi and rdi4p. Interpret the rdi4p coefficient.
-```{r}
+```{r logit HTNDerv}
 
 ```
 
