--- a/finalProj/airbnbShiny.Rmd
+++ b/finalProj/airbnbShiny.Rmd
@@ -1,35 +1,83 @@
 ---
-title: "Shiny App"
+title: "Airbnb Prices"
 output: 
   flexdashboard::flex_dashboard:
-    orientation: columns
-    vertical_layout: fill
 runtime: shiny
 ---
+<style>                     
+.navbar-inverse {
+    background-color: white;
+    border-color: #FF5A5F;
+}
+
+.navbar-inverse .navbar-brand {
+    color: #FF5A5F;
+}
+
+.navbar-inverse .navbar-nav {
+  color: #FF5A5F;
+}
+</style>    
+
 
 ```{r setup, include=FALSE}
 library(flexdashboard); library(tidyverse); library(plotly)
 ```
 
+Predict
+===================================== 
+
+Column {data-width=350}
+-------------------------------------
+Predict the nightly price of an Airbnb! This algorithm was trained on Seattle Airbnb data
+```{r inputs}
+
+# Room_type
+selectInput("room", "Type of room: ",
+            c("Entire home/apt" = "Entire home/apt",
+              "Private room" = "Private room",
+              "Shared room" = "Shared room"),
+            selected = "Entire home/apt")
+
+# Superhost
+selectInput("host", "Is the host an Airbnb Superhost? ",
+            c("No" = 'f',
+              "Yes" = "t"),
+            selected = 'f')
+
+# Bedrooms
+sliderInput("bedrooms", "Number of bedrooms:",
+            min = 0, max = 7, value = 2, step = 1
+)
+ 
+
+# Bathrooms
+sliderInput("bathrooms", "Number of bathrooms:",
+            min = 0, max = 8, value = 2, step = 0.5
+)
+
+# Accommodates
+sliderInput("accommodates", "Number of people it accommodates:",
+            min = 1, max = 16, value = 3, step = 1
+)
+
+# Reviews
+sliderInput("reviews", "Reviews per month:",
+            min = 0, max = 13, value = 5, step = 1
+)
+
+```
+
 Column {data-width=650}
------------------------------------------------------------------------
+-------------------------------------
 
-### Chart A
-
-```{r}
+```{r predict}
 orig = read.csv("listingsrefined.csv", header=T)
 
 airpre = select(orig, price, room_type, bathrooms, bedrooms, reviews_per_month, accommodates, host_is_superhost)
 
 air = na.omit(airpre)
-
-plot_ly(data = air, x = ~bedrooms, y = ~price, color = ~room_type) 
 ```
-
-Column {data-width=350}
------------------------------------------------------------------------
-
-### Chart B
 
 ```{r}
 # Create Training and Test data -
@@ -45,42 +93,119 @@ pricePred <- predict(lmMod, testData)  # predict price
 
 actuals_preds <- data.frame(cbind(actuals = testData$price, predicteds = pricePred))  # make actuals_predicteds dataframe.
 correlation_accuracy <- cor(actuals_preds)  # 67.6%
+```
+
+
+```{r plot}
+
+
+renderPlotly({
+  
+  # read in user input
+  host_is_superhost = input$host
+  room_type = input$room
+  bathrooms = input$bathrooms
+  bedrooms = input$bedrooms
+  accommodates = input$accommodates
+  reviews_per_month = input$reviews
+  
+  userInput = data.frame(host_is_superhost, room_type, bathrooms, bedrooms, accommodates, reviews_per_month)
+  
+  userPred = predict(lmMod, userInput)
+  
+  # actual vs. predicted y graph
+  finalPlot = plot_ly(data = actuals_preds, x = ~actuals, y = ~predicteds)
+  
+  
+  hline <- function(y = 0, color = "blue") {
+    list(
+      type = "line", 
+      x0 = 0, 
+      x1 = 1, 
+      xref = "paper",
+      y0 = y, 
+      y1 = y, 
+      line = list(color = color)
+    )
+  }
+  
+  # add prediction from user input
+  finalPlot %>% layout(shapes = list(hline(userPred)))
+  
+})
+```
+
+
+### Prediction {.value-box}
+```{r}
+renderValueBox({
+  host_is_superhost = input$host
+  room_type = input$room
+  bathrooms = input$bathrooms
+  bedrooms = input$bedrooms
+  accommodates = input$accommodates
+  reviews_per_month = input$reviews
+  
+  userInput = data.frame(host_is_superhost, room_type, bathrooms, bedrooms, accommodates, reviews_per_month)
+  
+  userPred = predict(lmMod, userInput)
+  prediction = paste('$', sprintf(userPred, fmt = '%#.2f'))
+  
+  valueBox(
+    value = prediction,
+    icon = "fa-money",
+    color = "primary"
+  )
+})
+```
+
+
+Visualize
+===================================== 
+
+Row {.tabset .tabset-fade}
+-------------------------------------
+### Bedrooms
+```{r}
+plot_ly(data = air, x = ~bedrooms, y = ~price, color = ~room_type) 
+```
+
+### Bathrooms
+```{r}
+plot_ly(data = air, x = ~bathrooms, y = ~price, color = ~room_type) 
+```
+
+### Accommodates
+```{r}
+plot_ly(data = air, x = ~accommodates, y = ~price, color = ~room_type) 
+```
+
+### Reviews
+```{r}
+plot_ly(data = air, x = ~reviews_per_month, y = ~price, color = ~host_is_superhost) 
+```
+
+### Room type
+```{r}
+avgRoom = air %>%
+  group_by(room_type) %>%
+  summarise(mean = mean(price), n = n())
+
+plot_ly(data = avgRoom, x = ~room_type, y = ~mean) 
+```
+
+
+Understand
+===================================== 
+
+- what it's about
+- dataset info
+- algorithm explanation
+- linear regression formula
+- sample of actual vs. predicted numbers
+```{r}
 head(actuals_preds)
 ```
 
-### Chart C
 
-```{r}
-# user input example
-host_is_superhost = 'f'
-room_type = "Private room"
-bathrooms = 1
-bedrooms = 1
-accommodates = 2
-reviews_per_month = 6
-
-userInput = data.frame(host_is_superhost, room_type, bathrooms, bedrooms, accommodates, reviews_per_month)
-
-userPred = predict(lmMod, userInput)
-userPred
-
-# actual vs. predicted y graph
-finalPlot = plot_ly(data = actuals_preds, x = ~actuals, y = ~predicteds)
-
-
-hline <- function(y = 0, color = "blue") {
-  list(
-    type = "line", 
-    x0 = 0, 
-    x1 = 1, 
-    xref = "paper",
-    y0 = y, 
-    y1 = y, 
-    line = list(color = color)
-  )
-}
-
-# add prediction from user input
-finalPlot %>% layout(shapes = list(hline(userPred)))
-```
 
